[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = "3.0.0-beta.5"
anyhow = "1"
itertools = "0.10"
either = "1"


[[bin]]
name = "day01"
path = "src/day01.rs"
[[bin]]
name = "day02"
path = "src/day02.rs"
[[bin]]
name = "day03"
path = "src/day03.rs"
[[bin]]
name = "day04"
path = "src/day04.rs"
[[bin]]
name = "day04_2"
path = "src/day04_2.rs"
[[bin]]
name = "day05"
path = "src/day05.rs"
[[bin]]
name = "day06"
path = "src/day06.rs"


[profile.release]
debug = true
