[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = "3.0.0-beta.5"
anyhow = "1"
itertools = "0.10"
either = "1"
nom = "7"
serde_scan = "0.4"
serde = { version = "1", features = ["derive"] }


[[bin]]
name = "day01"
path = "src/day01.rs"
[[bin]]
name = "day02"
path = "src/day02.rs"
[[bin]]
name = "day03"
path = "src/day03.rs"
[[bin]]
name = "day04"
path = "src/day04.rs"
[[bin]]
name = "day04_2"
path = "src/day04_2.rs"
[[bin]]
name = "day05"
path = "src/day05.rs"
[[bin]]
name = "day06"
path = "src/day06.rs"
[[bin]]
name = "day07"
path = "src/day07.rs"
[[bin]]
name = "day08"
path = "src/day08.rs"
[[bin]]
name = "day09"
path = "src/day09.rs"
[[bin]]
name = "day10"
path = "src/day10.rs"
[[bin]]
name = "day11"
path = "src/day11.rs"
[[bin]]
name = "day12"
path = "src/day12.rs"
[[bin]]
name = "day13"
path = "src/day13.rs"
[[bin]]
name = "day14"
path = "src/day14.rs"
[[bin]]
name = "day15"
path = "src/day15.rs"
[[bin]]
name = "day16"
path = "src/day16.rs"
[[bin]]
name = "day17"
path = "src/day17.rs"
[[bin]]
name = "day18"
path = "src/day18.rs"
[[bin]]
name = "day19"
path = "src/day19.rs"
[[bin]]
name = "day20"
path = "src/day20.rs"
[[bin]]
name = "day21"
path = "src/day21.rs"


[profile.release]
debug = true
