[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_scan = "0.4"
itertools = "0.10"


[[bin]]
name = "day01"
path = "src/day01.rs"
[[bin]]
name = "day02"
path = "src/day02.rs"
[[bin]]
name = "day03"
path = "src/day03.rs"
[[bin]]
name = "day04"
path = "src/day04.rs"
[[bin]]
name = "day05"
path = "src/day05.rs"


[profile.release]
debug = true
